mi segundo commit

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
   </div>
 
 
-  <nav>
+  <div class="gradient">
+    <nav>
 
-    <ul>
-      <li><a href="./index.html">Inicio</a></li>
-      <li><a href="./assets/obras_disp.html">Obras</a></li>
-      <li><a href="./assets/retratos.html">Retratos</a></li>
-      <li><a href="./assets/laminas.html">Dibujos</a></li>
-      <li><a href="./assets/contacto.html">Contacto</a></li>
-      <li><a href="#pie">Ir al pie de página</a></li>
-    </ul>
+      <ul>
+        <li><a href="./index.html">Inicio</a></li>
+        <li><a href="./assets/obras_disp.html">Obra</a></li>
+        <li><a href="./assets/retratos.html">Retratos</a></li>
+        <li><a href="./assets/laminas.html">Dibujos</a></li>
+        <li><a href="./assets/contacto.html">Contacto</a></li>
+        <li><a href="#pie">Ir al pie de página</a></li>
+      </ul>
 
-  </nav>
+    </nav>
+  </div>
 
   <section class="container-padre">
     <div class="texto">
