--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -5,56 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link href="../styles/bootstrap.min.css" rel="stylesheet">
+    <!--<link rel="stylesheet" href="../styles/styles.css">-->
     <title>Contacto</title>
 </head>
 
 <body>
-    <header></header>
+
     <!-- En este html se debe mostrar la info de contacto, formulario, etc.-->
-    <h1 class="title-one">Contacto</h1>
-    <div></div>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../assets/obras_disp.html">Obras</a></li>
-            <li><a href="../assets/retratos.html">Retratos</a></li>
-            <li><a href="../assets/laminas.html">Dibujos</a></li>
-            <li><a href="../assets/contacto.html">Contacto</a></li>
+    <h1 style="text-align: center; letter-spacing:10px;">Contacto</h1>
 
-        </ul>
-    </nav>
-    
-    <form action="">
-        <fieldset>
-            <legend>Espacio para consultas</legend>
-            <div>
-                <label for="nombre">Nombre: </label>
-                <input type="text" id="nombre" required>
-            </div>
-            <div>
-                <label for="apellido">Apellido: </label>
-                <input type="text" id="apellido" required>
-            </div>
-            <div>
-                <label for="email">E-mail: </label>
-                <input type="email" id="email" required>
-            </div>
-            <div>
-                <label for="mensaje"></label>
-                <textarea name="mensaje" id="mensaje" cols="30" rows="5" placeholder="Deja tu mensaje..."
-                    required></textarea>
-            </div>
-        </fieldset>
-        <div>
-            <input type="submit" id="enviar" value="Enviar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">Inicio</a><span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../assets/obras_disp.html">Obra</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../assets/retratos.html">Retratos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../assets/laminas.html">Láminas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../assets/contacto.html">Contacto</a>
+                </li>
+            </ul>
         </div>
-    </form>
-
-    <div>
-        <footer id="pie"></footer>
+    </nav>
     </div>
 
+    <div class="container">
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput2">Nombre</label>
+                <input type="text" class="form-control" id="exampleFormControlInput2">
+
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput3">Apellido</label>
+                <input type="text" class="form-control" id="exampleFormControlInput3">
+
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Deja tu mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div>
+                <input type="submit" id="enviar" value="Enviar">
+            </div>
+        </form>
+    </div>
+    <footer id="pie"></footer>
+    </div>
+    <script src="./js/bootstrap.bundle.min.js">
+    </script>
 </body>
 
 </html>
