--- a/assets/laminas.html
+++ b/assets/laminas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Láminas</title>
   </head>
@@ -51,5 +52,7 @@
     </div>
   </section>
   </main>
+  <script src="./js/bootstrap.bundle.min.js">
+  </script>
   </body>
 </html>
