--- a/assets/retratos.html
+++ b/assets/retratos.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../styles/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../styles/styles.css">
   <title>Retratos</title>
 </head>
@@ -59,7 +60,8 @@
 
   </section>
 
-
+  <script src="./js/bootstrap.bundle.min.js">
+  </script>
 </body>
 
 </html>
