--- a/index.html
+++ b/index.html
@@ -6,79 +6,69 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Galería Virtual</title>
-  <link rel="stylesheet" href="./styles/styles.css" />
+  <link href="./styles/bootstrap.min.css" rel="stylesheet">
+  <!--<link rel="stylesheet" href="./styles/styles.css" />-->
 </head>
 
 <body>
   <!-- En este html estaría el menú de navegación y la pantalla de inicio, un breve texto (quizá no) e imágenes / o un fondo que cambie cada tantos segundos-->
 
-
-  <div class="titulo">
-    <h1 id="titulo-inicio" class="title-one">Galería virtual</h1>
+<h1 style="text-align: center; letter-spacing:10px;" >Galería virtual</h1>
+<div class="container"></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Inicio</a><span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./assets/obras_disp.html">Obra</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./assets/retratos.html">Retratos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./assets/laminas.html">Láminas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"href="./assets/contacto.html">Contacto</a>
+      </li>
+    </ul>
   </div>
-
-
-  <div class="gradient">
-    <nav>
-
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./assets/obras_disp.html">Obra</a></li>
-        <li><a href="./assets/retratos.html">Retratos</a></li>
-        <li><a href="./assets/laminas.html">Dibujos</a></li>
-        <li><a href="./assets/contacto.html">Contacto</a></li>
-        <li><a href="#pie">Ir al pie de página</a></li>
-      </ul>
-
-    </nav>
-  </div>
-
-  <section class="container-padre">
-    <div class="texto">
-      <h2>Sobre mí</h2>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-        faucibus, tortor ac tristique tempor, libero ante dapibus urna, nec
-        finibus eros velit aliquam magna. Etiam in dui ut est laoreet congue.
-        Donec tempor quis risus sit amet laoreet. Aenean at nibh quis tortor
-        posuere tincidunt.Felis nunc, tempus ultrices velit sed, bibendum
-        ullamcorper lectus. Maecenas ut est a nisi hendrerit bibendum. Etiam
-        id quam libero. Nam vel mi velit. Donec at velit a massa posuere
-        sodales tristique eu sapien. Aliquam quis turpis vehicula odio
-        tincidunt rutrum at et metus. Mauris purus nunc, pulvinar vel laoreet
-        at, tristique tempor diam. Proin eu tortor eros.
-      </p>
+</nav>
+</div>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="./imagenes/paisaje1.jpg" alt="First slide">
     </div>
-    <div class="imagen">
-      <img src="./imagenes/paisaje1.jpg" alt="Paisaje">
-
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./imagenes/paisaje2.jpg" alt="Second slide">
     </div>
-    <div><img src="./imagenes/paisaje2.jpg" alt="Paisaje"></div>
-
-    <div><img src="./imagenes/autorretrato2.jpg" alt=""></div>
-
-    <div><img src="./imagenes/flores.jpg" alt="Flores"></div>
-    <div><img src="./imagenes/DesnudoPastel.jpg" alt="pastel"></div>
-    <div><img src="./imagenes/RetratoPastel.jpg" alt="Retrato"></div>
-    <div><img src="./imagenes/Metamorfosis.jpg" alt="Dibujo"></div>
-    <div><img src="./imagenes/naturalezaMuerta.jpg" alt="Naturaleza Muerta"></div>
-
-
-
-
-
-
-
-
-
-
-
-  </section>
-  <footer id="pie" class="pieDePagina">
-    <div class="volver"><a href="#titulo-inicio"><strong>Volver</strong></a>
-  </footer>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./imagenes/paisaje3.jpg" alt="Third slide">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+  
+
+  
+  <script src="./js/bootstrap.bundle.min.js">
+  </script>
 
 </body>
 
