Agrego bootstrap a todos los html

--- a/assets/obras_disp.html
+++ b/assets/obras_disp.html
@@ -6,56 +6,53 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="../styles/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../styles/styles.css">
+  <!--<link rel="stylesheet" href="../styles/styles.css">-->
   <title>Obras</title>
 </head>
 
 <body>
-  <header>
-    <h1 class="title-one">Obras</h1>
-    <div></div>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../assets/obras_disp.html">Obras</a></li>
-        <li><a href="../assets/retratos.html">Retratos</a></li>
-        <li><a href="../assets/laminas.html">Dibujos</a></li>
-        <li><a href="../assets/contacto.html">Contacto</a></li>
-      </ul>
+  <h1 style="text-align: center; letter-spacing:10px;">Obras disponibles</h1>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Inicio</a><span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/obras_disp.html">Obra</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/retratos.html">Retratos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/laminas.html">Láminas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-  </header>
-  <section class="container-padre">
 
-    
-      <!-- En este html se deben mostrar las obras a la venta, probablemente con información sobre su tamaño/ técnica.´Por temas de peso del archivo,
-      son imagenes a modo de ejemplo-->
-      <div class="imagen">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-          alt="Festín de Baltasar" /></div>
-      <div class="imagen"> <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-          alt="Festín de Baltasar" /></div>
-      <div class="imagen"><img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-          alt="Festín de Baltasar" /></div>
-      <div class="imagen"><img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-          alt="Festín de Baltasar" /></div>
-          <div class="imagen"><img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-            alt="Festín de Baltasar" /></div>
-            <div class="imagen"><img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-              alt="Festín de Baltasar" /></div>
-              <div class="imagen"><img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Rembrandt-Belsazar.jpg/1280px-Rembrandt-Belsazar.jpg"
-                alt="Festín de Baltasar" /></div>
-
-      
-    </section>
-    <script src="./js/bootstrap.bundle.min.js">
-    </script>
+    <img src="../imagenes/flores.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Flores">
+    <img src="../imagenes/autorretrato2.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;"
+      alt="Autorretrato">
+    <img src="../imagenes/Soledad.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Soledad">
+    <img src="../imagenes/PalacioDeLaMemoria.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;"
+      alt="Palacio">
+    <img src="../imagenes/pesadilla.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Pesadilla">
+    <img src="../imagenes/taza.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="taza">
+    <img src="..." class="rounded float-right" alt="...">
+    <img src="..." class="rounded float-right" alt="...">
+  </div>
+  <script src="./js/bootstrap.bundle.min.js">
+  </script>
 </body>
 
 </html>
