--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- En este html estaría el menú de navegación y la pantalla de inicio, un breve texto (quizá no) e imágenes / o un fondo que cambie cada tantos segundos-->
 
 <h1 style="text-align: center; letter-spacing:10px;" >Galería virtual</h1>
-<div class="container"></div>
+<div class="container">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
