--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -7,13 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../styles/bootstrap.min.css" rel="stylesheet">
     <!--<link rel="stylesheet" href="../styles/styles.css">-->
+    <style>
+        .animationTitle{
+          color: red;
+          animation-name: animationTitle;
+          animation-duration: 15s;
+        }
+        @keyframes animationTitle{
+          25% {color: brown;}
+          50% {color: darkred;}
+          75% {color: black;}
+          100% {color:red;}
+        }
+      </style>
     <title>Contacto</title>
 </head>
 
 <body>
 
     <!-- En este html se debe mostrar la info de contacto, formulario, etc.-->
-    <h1 style="text-align: center; letter-spacing:10px;">Contacto</h1>
+    <div class="animationTitle"><h1 style="text-align: center; letter-spacing:10px;">Contacto</h1>
+       </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
