--- a/assets/laminas.html
+++ b/assets/laminas.html
@@ -7,40 +7,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="../styles/bootstrap.min.css" rel="stylesheet">
   <!--<link rel="stylesheet" href="../styles/styles.css">-->
+  <style>
+    .animationTitle{
+      color: red;
+      animation-name: animationTitle;
+      animation-duration: 15s;
+    }
+    @keyframes animationTitle{
+      25% {color: brown;}
+      50% {color: darkred;}
+      75% {color: black;}
+      100% {color:red;}
+    }
+  </style>
   <title>Láminas</title>
 </head>
 
 <body>
-  <h1 style="text-align: center; letter-spacing:10px;">Láminas y Dibujos</h1>
+  <div class="animationTitle">
+    <h1 style="text-align: center; letter-spacing:10px;">Láminas y Dibujos</h1>
+  </div>
   <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="../index.html">Inicio</a><span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../assets/obras_disp.html">Obra</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../assets/retratos.html">Retratos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../assets/laminas.html">Láminas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../assets/contacto.html">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  
-  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Inicio</a><span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/obras_disp.html">Obra</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/retratos.html">Retratos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/laminas.html">Láminas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../assets/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
     <h2 style="text-align: center;">Procedimiento para adquirir un dibujo</h2>
     <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus quaerat in explicabo
         laborum maiores, culpa ipsa, voluptatum incidunt nisi suscipit eius. Asperiores ab quos optio molestiae mollitia
@@ -48,14 +63,14 @@
         Laboriosam, quo. Soluta quas reiciendis earum pariatur sint similique ullam quidem consequuntur, ex provident
         necessitatibus numquam temporibus labore minima natus harum eligendi mollitia. Doloribus hic ratione tempore nam
         debitis repudiandae!</em></p>
-  
-  <img  src="../imagenes/terraza.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
-<img src="../imagenes/universo.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
-<img src="../imagenes/Montañas.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
 
-<img src=".." class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
-<img src=".." class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
-</div>
+    <img src="../imagenes/terraza.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
+    <img src="../imagenes/universo.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
+    <img src="../imagenes/Montañas.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
+
+    <img src=".." class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
+    <img src=".." class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
+  </div>
   <script src="./js/bootstrap.bundle.min.js">
   </script>
 </body>
