--- a/index.html
+++ b/index.html
@@ -8,65 +8,81 @@
   <title>Galería Virtual</title>
   <link href="./styles/bootstrap.min.css" rel="stylesheet">
   <!--<link rel="stylesheet" href="./styles/styles.css" />-->
+  <style>
+    .animationTitle{
+      color: red;
+      animation-name: animationTitle;
+      animation-duration: 15s;
+    }
+    @keyframes animationTitle{
+      25% {color: brown;}
+      50% {color: darkred;}
+      75% {color: black;}
+      100% {color:red;}
+    }
+  </style>
 </head>
 
 <body>
   <!-- En este html estaría el menú de navegación y la pantalla de inicio, un breve texto (quizá no) e imágenes / o un fondo que cambie cada tantos segundos-->
 
-<h1 style="text-align: center; letter-spacing:10px;" >Galería virtual</h1>
-<div class="container">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Inicio</a><span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./assets/obras_disp.html">Obra</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./assets/retratos.html">Retratos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./assets/laminas.html">Láminas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"href="./assets/contacto.html">Contacto</a>
-      </li>
-    </ul>
+  <div class="animationTitle">
+    <h1 style="text-align: center; letter-spacing:10px;">Galería virtual</h1>
   </div>
-</nav>
-</div>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="./imagenes/paisaje1.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="./imagenes/paisaje2.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="./imagenes/paisaje3.jpg" alt="Third slide">
-    </div>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Inicio</a><span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./assets/obras_disp.html">Obra</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./assets/retratos.html">Retratos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./assets/laminas.html">Láminas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./assets/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="5000">
+        <img class="d-block w-100" src="./imagenes/paisaje1.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item" data-bs-interval="5000">
+        <img class="d-block w-100" src="./imagenes/paisaje2.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./imagenes/paisaje3.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
 
-  
 
-  
+
+
   <script src="./js/bootstrap.bundle.min.js">
   </script>
 
