Agregué map(get), mixins, y usé un extend, ademas de mejorar el Seo

--- a/assets/obras_disp.html
+++ b/assets/obras_disp.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="../styles/bootstrap.min.css" rel="stylesheet">
+  <meta name="keywords" content="galeria, arte, pintura, dibujo">
+  <meta name="description" content="Obras a la venta, consulte, no molesta.">
   <!--<link rel="stylesheet" href="../styles/styles.css">-->
   <style>
     .animationTitle{
