--- a/assets/retratos.html
+++ b/assets/retratos.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../styles/bootstrap.min.css" rel="stylesheet">
   <!-- <link rel="stylesheet" href="../styles/styles.css">-->
+  <meta name="keywords" content="galeria, arte, pintura, dibujo, retratos, laminas">
+  <meta name="description" content="Encarga tu retrato.">
   <style>
     .animationTitle{
       color: red;
