--- a/index.html
+++ b/index.html
@@ -8,19 +8,10 @@
   <title>Galería Virtual</title>
   <link href="./styles/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css" />
-  <style>
-    .animationTitle{
-      color: red;
-      animation-name: animationTitle;
-      animation-duration: 15s;
-    }
-    @keyframes animationTitle{
-      25% {color: brown;}
-      50% {color: darkred;}
-      75% {color: black;}
-      100% {color:red;}
-    }
-  </style>
+  <!--SEO-->
+
+  <meta name="keywords" content="galeria, arte, pintura, dibujo, retratos, laminas">
+  <meta name="description" content="Venta de pinturas y dibujos. Vamos, vamos, anímese.">
 </head>
 
 <body>
@@ -28,6 +19,8 @@
 
   <div class="animationTitle">
     <h1 style="text-align: center; letter-spacing:10px;">Galería virtual</h1>
+  </div>
+
   </div>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -57,34 +50,46 @@
       </div>
     </nav>
   </div>
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="5000">
-        <img class="d-block w-100" src="./imagenes/paisaje1.jpg" alt="First slide">
+  <div class="estilos_map">
+    <p>galeria, arte, pintura.Dibujo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem at aliquam eligendi consequatur ipsam
+      deserunt. Numquam, a? Inventore nemo totam aliquid sequi tempora neque recusandae consequuntur, nesciunt nostrum,
+      impedit optio!
+      Quam, odio ratione. Exercitationem corrupti laudantium fuga rem reiciendis fugiat? Facere harum maiores commodi
+      laborum quis rem distinctio impedit eius voluptate perspiciatis, ex ullam quos necessitatibus iste delectus
+      placeat! Molestias!</p>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img class="d-block w-100" src="./imagenes/paisaje1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item" data-bs-interval="5000">
+          <img class="d-block w-100" src="./imagenes/paisaje2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="./imagenes/paisaje3.jpg" alt="Third slide">
+        </div>
       </div>
-      <div class="carousel-item" data-bs-interval="5000">
-        <img class="d-block w-100" src="./imagenes/paisaje2.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./imagenes/paisaje3.jpg" alt="Third slide">
-      </div>
+
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+    <div class="estilos_map--inferior">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, vero maiores pariatur maxime quaerat unde modi
+        impedit iste voluptas aut sapiente vitae harum eaque animi repellat assumenda repudiandae ex porro!
+        Eius vero accusantium velit, ratione eligendi enim inventore eveniet consectetur at sint omnis adipisci ut
+        magnam maiores quia ducimus odio quod, tempora illo perspiciatis. Accusamus porro repellendus mollitia rerum
+        ipsam!</p>
+    </div>
+    <div class="box_mixin">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident illo excepturi fugit velit doloremque.
+        Laboriosam, dolores corporis quia incidunt ducimus ullam similique sed magnam assumenda corrupti, aliquid,
+        dignissimos commodi et!1</p>
+    </div>
 
 
 
 
 
-  <script src="./js/bootstrap.bundle.min.js">
-  </script>
+    <script src="./js/bootstrap.bundle.min.js">
+    </script>
 
 </body>
 
