Mejora de estilos, personalización del framework, subida al servidor

--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -7,29 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../styles/bootstrap.min.css" rel="stylesheet">
     <meta name="keywords" content="galeria, arte, pintura, , retratos, laminas, retratos, laminas">
-  <meta name="description" content="Contácteme si tiene alguna consulta">
-    <!--<link rel="stylesheet" href="../styles/styles.css">-->
-    <style>
-        .animationTitle{
-          color: red;
-          animation-name: animationTitle;
-          animation-duration: 15s;
-        }
-        @keyframes animationTitle{
-          25% {color: brown;}
-          50% {color: darkred;}
-          75% {color: black;}
-          100% {color:red;}
-        }
-      </style>
+    <meta name="description" content="Contácteme si tiene alguna consulta">
+    <link rel="stylesheet" href="../styles/styles.css">
+    
     <title>Contacto</title>
 </head>
 
 <body>
 
     <!-- En este html se debe mostrar la info de contacto, formulario, etc.-->
-    <div class="animationTitle"><h1 style="text-align: center; letter-spacing:10px;">Contacto</h1>
-       </div>
+    <div class="animationTitle">
+        <h1>Contacto</h1>
+    </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
@@ -57,9 +46,16 @@
             </ul>
         </div>
     </nav>
-    </div>
-
     <div class="container">
+    <h2>Para consultas sobre encargos y obras disponibles, llene el formulario y deje su mensaje.</h2>
+    <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus quaerat in explicabo
+        laborum maiores, culpa ipsa, voluptatum incidunt nisi suscipit eius. Asperiores ab quos optio molestiae mollitia
+        tempore. Culpa.
+        Laboriosam, quo. Soluta quas reiciendis earum pariatur sint similique ullam quidem consequuntur, ex provident
+        necessitatibus numquam temporibus labore minima natus harum eligendi mollitia. Doloribus hic ratione tempore nam
+        debitis repudiandae!</em></p>
+
+    
         <form>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
