--- a/assets/laminas.html
+++ b/assets/laminas.html
@@ -8,26 +8,16 @@
   <link href="../styles/bootstrap.min.css" rel="stylesheet">
   <meta name="keywords" content="galeria, arte, pintura, dibujo, retratos, laminas">
   <meta name="description" content="Consiga su lámina o dibujo original.">
-  <!--<link rel="stylesheet" href="../styles/styles.css">-->
+  <link rel="stylesheet" href="../styles/styles.css">
   <style>
-    .animationTitle{
-      color: red;
-      animation-name: animationTitle;
-      animation-duration: 15s;
-    }
-    @keyframes animationTitle{
-      25% {color: brown;}
-      50% {color: darkred;}
-      75% {color: black;}
-      100% {color:red;}
-    }
+
   </style>
   <title>Láminas</title>
 </head>
 
 <body>
   <div class="animationTitle">
-    <h1 style="text-align: center; letter-spacing:10px;">Láminas y Dibujos</h1>
+    <h1>Láminas y Dibujos</h1>
   </div>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -57,14 +47,17 @@
       </div>
     </nav>
 
-
-    <h2 style="text-align: center;">Procedimiento para adquirir un dibujo</h2>
-    <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus quaerat in explicabo
-        laborum maiores, culpa ipsa, voluptatum incidunt nisi suscipit eius. Asperiores ab quos optio molestiae mollitia
-        tempore. Culpa.
-        Laboriosam, quo. Soluta quas reiciendis earum pariatur sint similique ullam quidem consequuntur, ex provident
-        necessitatibus numquam temporibus labore minima natus harum eligendi mollitia. Doloribus hic ratione tempore nam
-        debitis repudiandae!</em></p>
+    <div>
+      <h2 style="text-align: center;">Procedimiento para adquirir un dibujo</h2>
+      <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus quaerat in explicabo
+          laborum maiores, culpa ipsa, voluptatum incidunt nisi suscipit eius. Asperiores ab quos optio molestiae
+          mollitia
+          tempore. Culpa.
+          Laboriosam, quo. Soluta quas reiciendis earum pariatur sint similique ullam quidem consequuntur, ex provident
+          necessitatibus numquam temporibus labore minima natus harum eligendi mollitia. Doloribus hic ratione tempore
+          nam
+          debitis repudiandae!</em></p>
+    </div>
 
     <img src="../imagenes/terraza.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
     <img src="../imagenes/universo.jpg" class="rounded float-left" style="max-width: 25%; margin: 3%;" alt="Lámina">
