--- a/assets/retratos.html
+++ b/assets/retratos.html
@@ -6,26 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../styles/bootstrap.min.css" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="../styles/styles.css">-->
+  <link rel="stylesheet" href="../styles/styles.css">
   <meta name="keywords" content="galeria, arte, pintura, dibujo, retratos, laminas">
   <meta name="description" content="Encarga tu retrato.">
-  <style>
-    .animationTitle{
-      color: red;
-      animation-name: animationTitle;
-      animation-duration: 15s;
-    }
-    @keyframes animationTitle{
-      25% {color: brown;}
-      50% {color: darkred;}
-      75% {color: black;}
-      100% {color:red;}
-    }
-  </style>
+  
   <title>Retratos</title>
 </head>
 
 <body>
+  <!--Tanto en este html como en el resto, bajo el h2 iría un pequeño texto de ser necesario, explicando técnica y
+  procedimientos para encargar-->
   <div class="animationTitle">
     <h1 style="text-align: center; letter-spacing:10px;">Retratos</h1>
   </div>
@@ -58,7 +48,7 @@
     </nav>
 
 
-    <h2 style="text-align: center;">Procedimiento para encargar un retrato</h2>
+    <h2>Procedimiento para encargar un retrato</h2>
     <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus quaerat in explicabo
         laborum maiores, culpa ipsa, voluptatum incidunt nisi suscipit eius. Asperiores ab quos optio molestiae mollitia
         tempore. Culpa.
@@ -66,16 +56,11 @@
         necessitatibus numquam temporibus labore minima natus harum eligendi mollitia. Doloribus hic ratione tempore nam
         debitis repudiandae!</em></p>
 
-    <img src="../imagenes/autorretrato.jpg" class="rounded float-left"
-      style="max-width: 25%; margin: 3%; border: 3px solid brown;" alt="autorretrato">
-    <img src="../imagenes/RetratoOleo.jpg" class="rounded float-left"
-      style="max-width: 25%; margin: 3%; border: 3px solid brown;" alt="retrato">
-    <img src="../imagenes/RetratoPastel.jpg" class="rounded float-left"
-      style="max-width: 25%; margin: 3%; border: 3px solid brown;" alt="Lámina">
-    <img src="../imagenes/RetratoPastel1.jpg" class="rounded float-left"
-      style="max-width: 25%; margin: 3%; border: 3px solid brown;" alt="Lámina">
-    <img src="../imagenes/retratoPastel5.jpg" class="rounded float-left"
-      style="max-width: 25%; margin: 3%; border: 3px solid brown;" alt="Lámina">
+    <img src="../imagenes/autorretrato.jpg" class="rounded float-left obra_disp" alt="autorretrato">
+    <img src="../imagenes/RetratoOleo.jpg" class="rounded float-left obra_disp" alt="retrato">
+    <img src="../imagenes/RetratoPastel.jpg" class="rounded float-left obra_disp" alt="Retrato">
+    <img src="../imagenes/RetratoPastel1.jpg" class="rounded float-left obra_disp" alt="Retrato">
+    <img src="../imagenes/retratoPastel5.jpg" class="rounded float-left obra_disp" alt="Retrato">
   </div>
 
   <script src="./js/bootstrap.bundle.min.js">
