--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-  <!-- En este html estaría el menú de navegación y la pantalla de inicio, un breve texto (quizá no) e imágenes / o un fondo que cambie cada tantos segundos-->
+  <!-- La idea en el index, habiendo visto algunas otras páginas de galería como referencia, es que sea sencillo, solo con el carrousel, 
+  titulo, y menú de navegación-->
 
   <div class="animationTitle">
     <h1 style="text-align: center; letter-spacing:10px;">Galería virtual</h1>
@@ -32,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Inicio</a><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./assets/obras_disp.html">Obra</a>
@@ -51,6 +52,7 @@
     </nav>
   </div>
   <div class="estilos_map">
+    <h2> Sobre mí</h2>
     <p>galeria, arte, pintura.Dibujo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem at aliquam eligendi consequatur ipsam
       deserunt. Numquam, a? Inventore nemo totam aliquid sequi tempora neque recusandae consequuntur, nesciunt nostrum,
       impedit optio!
@@ -68,21 +70,13 @@
         <div class="carousel-item">
           <img class="d-block w-100" src="./imagenes/paisaje3.jpg" alt="Third slide">
         </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="./imagenes/paisaje4.jpg" alt="Fourth slide">
+        </div>
       </div>
 
     </div>
-    <div class="estilos_map--inferior">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, vero maiores pariatur maxime quaerat unde modi
-        impedit iste voluptas aut sapiente vitae harum eaque animi repellat assumenda repudiandae ex porro!
-        Eius vero accusantium velit, ratione eligendi enim inventore eveniet consectetur at sint omnis adipisci ut
-        magnam maiores quia ducimus odio quod, tempora illo perspiciatis. Accusamus porro repellendus mollitia rerum
-        ipsam!</p>
-    </div>
-    <div class="box_mixin">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident illo excepturi fugit velit doloremque.
-        Laboriosam, dolores corporis quia incidunt ducimus ullam similique sed magnam assumenda corrupti, aliquid,
-        dignissimos commodi et!1</p>
-    </div>
+    
 
 
 
