Proyecto final, ordené los grids y elegí una mejor paleta de color

--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="galeria, arte, pintura, , retratos, laminas, retratos, laminas">
     <meta name="description" content="Contácteme si tiene alguna consulta">
     <link rel="stylesheet" href="../styles/styles.css">
-    
+
     <title>Contacto</title>
 </head>
 
@@ -19,43 +19,38 @@
     <div class="animationTitle">
         <h1>Contacto</h1>
     </div>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a><span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../assets/obras_disp.html">Obra</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../assets/retratos.html">Retratos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../assets/laminas.html">Láminas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../assets/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
     <div class="container">
-    <h2>Para consultas sobre encargos y obras disponibles, llene el formulario y deje su mensaje.</h2>
-    <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus quaerat in explicabo
-        laborum maiores, culpa ipsa, voluptatum incidunt nisi suscipit eius. Asperiores ab quos optio molestiae mollitia
-        tempore. Culpa.
-        Laboriosam, quo. Soluta quas reiciendis earum pariatur sint similique ullam quidem consequuntur, ex provident
-        necessitatibus numquam temporibus labore minima natus harum eligendi mollitia. Doloribus hic ratione tempore nam
-        debitis repudiandae!</em></p>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html">Inicio</a><span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../assets/obras_disp.html">Obra</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../assets/retratos.html">Retratos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../assets/laminas.html">Láminas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../assets/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="texto">
+            <h2>Para consultas sobre encargos y obras disponibles, llene el formulario y deje su mensaje.</h2>
+        </div>
 
-    
+
         <form>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
@@ -79,6 +74,7 @@
                 <input type="submit" id="enviar" value="Enviar">
             </div>
         </form>
+    </div>
     </div>
     <footer id="pie"></footer>
     </div>
