--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Galería Virtual</title>
+  <title>Galería - Agustin Mechelk</title>
   <link href="./styles/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css" />
   <!--SEO-->
@@ -19,7 +19,7 @@
   titulo, y menú de navegación-->
 
   <div class="animationTitle">
-    <h1 style="text-align: center; letter-spacing:10px;">Galería virtual</h1>
+    <h1 style="text-align: center; letter-spacing:10px;">Galería Mechelk</h1>
   </div>
 
   </div>
@@ -53,12 +53,11 @@
   </div>
   <div class="estilos_map">
     <h2> Sobre mí</h2>
-    <p>galeria, arte, pintura.Dibujo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem at aliquam eligendi consequatur ipsam
-      deserunt. Numquam, a? Inventore nemo totam aliquid sequi tempora neque recusandae consequuntur, nesciunt nostrum,
-      impedit optio!
-      Quam, odio ratione. Exercitationem corrupti laudantium fuga rem reiciendis fugiat? Facere harum maiores commodi
-      laborum quis rem distinctio impedit eius voluptate perspiciatis, ex ullam quos necessitatibus iste delectus
-      placeat! Molestias!</p>
+    <p>Pintor Uruguayo nacido en 1996 en Montevideo, Uruguay. A los 14 años empieza a pintar, de la mano
+      de los docentes del taller para jóvenes en el museo Torres García. Continua dibujando principalmente
+      utilizando la técnica de fibra negra sobre papel, hasta que en el año 2020 entra en el taller de Arte Lara,
+      donde actualmente estudia pintura, realizando estudios de obras así como retratos, paisajes, y naturaleza muerta.
+    </p>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
